view/theme/frio/css/style.css
/* ... */
header #banner {
	position: fixed;
	top: 0px;
	left: 49%;
	right: 49%;
	z-index: 1040;
	margin-top: 12.5px;
	text-align: center;
	text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
	font-size: 14px;
	font-family: tahoma, "Lucida Sans", sans;
	color: #fff;
	font-weight: bold;
	white-space: nowrap;
	padding-left: 55px;
}
header #banner #logo-img,
.navbar-brand #logo-img {
	-webkit-mask-image: url("img/friendica-25.png");
	background-color: $nav_icon_color;
	height: 25px;
	width: 25px;
	margin-left: auto;
	margin-right: auto;
}

#navbrand-container {
	display: flex;
}
#navbrand-container #navbar-brand-text {
	padding-left: 5px;
	color: $nav_icon_color;
}

/* offcanvas section */

/* Right offcanvas uses: #offcanvasUsermenu, .offcanvas-right-active
   .offcanvas-right and .offcanvas-right-overlay */
.off-canvas {
	width: 300px;
	position: fixed;
	left: 0;
	top: 0;
	height: 100%;
	overflow-x: hidden;
	overflow-y: auto;
	background-color: #333;
	transform: translateX(-100%);
	transition: 0.4s ease-in-out;
	z-index: 1060;
}
#offcanvasUsermenu {
	width: 300px;
	position: fixed;
	right: 0px;
	top: 50px;
	height: 100%;
	overflow-x: hidden;
	overflow-y: auto;
	background-color: #333;
	transform: translateX(100%);
	transition: 0.4s ease-in-out;
	z-index: 1060;
}
.offcanvas-active .off-canvas {
	transform: translateX(0);
}
.offcanvas-right-active #offcanvasUsermenu {
	transform: translateX(0);
}
.navbar-fixed-top {
	transition: 0.4s ease-in-out;
	width: 100%;
}
.page-wrapper {
	padding-top: 50px;
	transition: 0.4s ease-in-out;
}
.offcanvas-active .page-wrapper,
.offcanvas-active .navbar-fixed-top {
	transform: translateX(300px);
}

.offcanvas-overlay {
	position: fixed;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 1050;
	visibility: hidden;
	opacity: 0;
	transition: 0.4s ease-in-out;
}
.offcanvas-right-overlay {
	position: fixed;
	right: 0;
	top: 50px;
	width: 100%;
	height: 100%;
	background-color: rgba(0, 0, 0, 0.5);
	z-index: 1050;
	visibility: hidden;
	opacity: 0;
	transition: 0.4s ease-in-out;
}
.offcanvas-active .offcanvas-overlay,
.offcanvas-right-active .offcanvas-right-overlay {
	opacity: 1;
	visibility: visible;
}
/* offcanvas section ends */

/* NavBar */
.topbar {
	position: fixed;
	display: block;
	height: 50px;
	width: 100%;
	padding-left: 15px;
	padding-right: 15px;
}
.topbar ul.nav {
	float: left;
}
.topbar ul.nav > li {
	float: left;
}
@media (min-width: 992px) {
	.topbar ul.nav > li > a,
	.topbar ul.nav > li > button {
		padding-top: 15px;
		padding-bottom: 15px;
		line-height: 20px;
	}
}
@media (max-width: 991px) {
	.topbar ul.nav > li > a,
	.topbar ul.nav > li > button {
		padding: 15px 10px;
	}
}
.topbar .dropdown-footer {
	margin: 10px;
}
.topbar .dropdown-header {
	font-size: 16px;
	padding: 3px 10px;
	margin-bottom: 10px;
	font-weight: 300;
	color: #bebebe;
}
.topbar .dropdown-header .dropdown-header-link {
	position: absolute;
	top: 2px;
	right: 10px;
}
.topbar .dropdown-header .dropdown-header-link a,
.topbar .dropdown-header .dropdown-header-link .btn-link {
	color: $link_color !important;
	font-size: 12px;
	font-weight: 400;
}
.topbar .dropdown-header:hover {
	color: #bebebe;
}
#topbar-first,
nav.navbar {
	background-color: $nav_bg;
	top: 0;
	z-index: 1030;
	color: $nav_icon_color;
}
@media screen and (max-width: 767px) {
	#topbar-first,
	nav.navbar {
		padding: 0 2px;
	}
}

#topbar-first .navbar-toggle {
	margin-top: 5px;
	margin-bottom: 0;
	margin-right: 0;
}
#topbar-first .nav > li > a,
#topbar-first .nav > li > button,
nav.navbar .nav > li > a,
nav.navbar .nav > li > button {
	color: $nav_icon_color;
}
#topbar-first .nav > .open > a,
#topbar-first .nav > .open > button {
	background-color: $nav_bg;
}
#topbar-first .nav > li > a:hover,
#topbar-first .nav > li > a:focus,
#topbar-first .nav > li > button:not(#main-menu):hover,
#topbar-first .nav > li > button:not(#main-menu):focus,
nav.navbar .nav > li > a:hover,
nav.navbar .nav > li > a:focus,
nav.navbar .nav > li > button:hover,
nav.navbar .nav > li > button:focus {
	background-color: $nav_icon_hover_color;
}
#topbar-first .nav > .account {
	height: 50px;
	margin-left: 20px;
}
#topbar-first .nav > .account img {
	margin-left: 10px;
	height: 32px;
	width: 32px;
	border-radius: 3px;
}
#topbar-first .nav > .account .dropdown-toggle {
	padding: 8px 5px 0px;
	line-height: 1.1em;
	text-align: left;
}
#topbar-first .nav > .account .dropdown-toggle span {
	font-size: 12px;
}
#topbar-first .topbar-brand {
	position: relative;
	z-index: 2;
}
#topbar-first .topbar-actions {
	position: relative;
	z-index: 3;
}
#topbar-first .topbar-nav {
	left: 0;
	right: 0;
	text-align: center;
	z-index: 1;
}
#topbar-first .topbar-nav .nav-segment {
	position: relative;
	text-align: left;
}
#topbar-first .topbar-nav .nav-segment > a {
	display: inline-block;
	text-decoration: none;
	text-align: left;
}
#topbar-first .topbar-nav .nav-segment .nav-notification {
	position: absolute;
	top: 4px;
	right: -2px;
	background-color: #ff3535;
}
#topbar-first #intro-update {
	cursor: pointer;
}
#topbar-first .topbar-nav .arrow:after {
	position: absolute;
	display: block;
	width: 0;
	height: 0;
	border-color: transparent;
	border-style: solid;
	border-width: 10px;
	content: " ";
	top: 1px;
	margin-left: -10px;
	border-top-width: 0;
	border-bottom-color: #fff;
	z-index: 1035;
}
#topbar-first .topbar-nav .arrow {
	position: absolute;
	display: block;
	width: 0;
	height: 0;
	border-color: transparent;
	border-style: solid;
	z-index: 1001;
	border-width: 11px;
	left: 50%;
	margin-left: -18px;
	border-top-width: 0;
	border-bottom-color: rgba(0, 0, 0, 0.15);
	top: -19px;
	z-index: 1035;
}
#topbar-first .topbar-nav .dropdown-menu {
	width: 350px;
	margin-left: -148px;
}
#topbar-first .topbar-nav .dropdown-menu ul.media-list {
	max-height: 400px;
	overflow: auto;
}
#topbar-first .topbar-nav .dropdown-menu li {
	position: relative;
}
/* ... */

